fix: math overflow scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,3 +48,13 @@ body,
   display: none;
   visibility: hidden;
 }
+
+.katex-mathml {
+  max-width: 100%;
+  overflow: scroll;
+}
+
+.katex-mathml * {
+  max-width: 100%;
+  overflow: scroll;
+}
